--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-torch>=2.7.0
+torch>=2.7.1
 gradio>=5.35.0
-transformers>=4.53.0
 pre-commit>=4.2.0
-# git+https://github.com/vllm-project/vllm.git For vLLM
+PyMuPDF>=1.26.1
+av>=14.4.0
+accelerate>=1.6.0
+git+https://github.com/huggingface/transformers.git
+git+https://github.com/vllm-project/vllm.git
