Fix gradio chat mode
1.Fix gradio chat mode
2.Add startup parameters for gradio
3.Fix requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ av>=14.4.0
 accelerate>=1.6.0
 git+https://github.com/huggingface/transformers.git
 git+https://github.com/vllm-project/vllm.git
+spaces
+#gradio[mcp]
