--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ pre-commit>=4.2.0
 PyMuPDF>=1.26.1
 av>=14.4.0
 accelerate>=1.6.0
-git+https://github.com/huggingface/transformers.git
+transformers==4.53.0
+# git+https://github.com/huggingface/transformers.git
 git+https://github.com/vllm-project/vllm.git
