--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-transformers>=4.53.2
-vllm>=0.9.2
+git+https://github.com/huggingface/transformers.git
+git+https://github.com/vllm-project/vllm.git
 torchvision>=0.22.0
-gradio>=5.35.0
+gradio>=5.39.0
 pre-commit>=4.2.0
-PyMuPDF>=1.26.1
-av>=14.4.0
-accelerate>=1.6.0
-spaces>=0.37.1
+PyMuPDF>=1.26.3
+av>=15.0.0
+accelerate>=1.9.0
+spaces>=0.39.0
