--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-git+https://github.com/huggingface/transformers.git
-git+https://github.com/vllm-project/vllm.git
 torchvision>=0.22.0
 gradio>=5.39.0
 pre-commit>=4.2.0
@@ -7,3 +5,6 @@ PyMuPDF>=1.26.3
 av>=15.0.0
 accelerate>=1.9.0
 spaces>=0.39.0
+# transformers>=4.56.0
+# vllm>=0.10.2
+# sglang>=0.4.11
