--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,5 +1,5 @@
 name: "\U0001F41B Bug Report"
-description: Submit a bug report to help us improve GLM-4.1V-Thinking / 提交一个 Bug 问题报告来帮助我们改进 GLM-4.1V-Thinking
+description: Submit a bug report to help us improve GLM-V / 提交一个 Bug 问题报告来帮助我们改进 GLM-V
 body:
   - type: textarea
     id: system-info
