--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 torchvision>=0.23.0
-git+https://github.com/huggingface/transformers.git
+transformers-v4.55.0-GLM-4.5V-preview
 accelerate>=1.10.0
 gradio>=5.42.0
 pre-commit>=4.2.0
@@ -7,4 +7,3 @@ PyMuPDF>=1.26.3
 av>=15.0.0
 spaces>=0.40.0
 sglang>=0.5.0rc1
-# vllm>=0.10.2
