--- a/.github/ISSUE_TEMPLATE/feature-request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yaml
@@ -1,5 +1,5 @@
 name: "\U0001F680 Feature request"
-description: Submit a request for a new GLM-4.1V-Thinking feature / 提交一个新的 GLM-4.1V-Thinking 的功能建议
+description: Submit a request for a new GLM-V / 提交一个新的 GLM-V 的功能建议
 labels: [ "feature" ]
 body:
   - type: textarea
